--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -38,8 +38,8 @@ jobs:
         commit-message: '✏️ Update papers automatically.'
         force-add: 'true'
         files: README.md .github/ISSUE_TEMPLATE.md
-        name: Zezhishao
-        email: 864453277@qq.com
+        name: JunjianLi
+        email: 1062248402@qq.com
 
     - name: Create an issue to notify
       uses: JasonEtco/create-an-issue@v2
