--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -5,7 +5,7 @@ on:
     types:
       - created # for test
   schedule:
-      - cron: '01 8 * * *' # 00:30 Beijing time every Monday to Friday
+      - cron: '7 8 * * *'
 
 permissions:
   contents: write
