--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -5,7 +5,7 @@ on:
     types:
       - created # for test
   schedule:
-      - cron: '15 8 * * *'
+      - cron: '13 8 * * 0-6' # 00:30 Beijing time every Monday to Friday
 
 permissions:
   contents: write
