--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -45,3 +45,6 @@ jobs:
       uses: JasonEtco/create-an-issue@v2
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+on:
+  workflow_dispatch:
